deploy/k8s/overlays/quickstart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hanko
  name: hanko
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - hanko.test
      secretName: hanko-tls
  rules:
    - host: hanko.test
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hanko
                port:
                  name: http
